# polybar-iconography

./: .gitignore  Cargo.toml  Iconography.hsh  LICENSE  README.md  autorun.sh  bspwm-dynamic-workspace.sh  config.yml  example.yml  go.mod  gwatch.json  main.go  run.sh  todo.md
bspc/: bspc.go
iconography/: bspc.go  iconography.go
pkg/bspc/: bspc.go
pkg/iconography/: iconography.go
src/: Iconography.go  bspc.rs  colors.rs  example.yml  formatter.rs  lib.rs  main.go  main.rs  settings.rs  x11.rs
